updated http server

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <title>AAAAAA</title>
+        <title>HTTP server</title>
     </head>
     <body>
-        <p>This is bruh</p>
+        <h1>Welcome!</h1>
+        <p>Hi! This is an HTTP server written by Java!</p>
     </body>
 </html>
